--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,126 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<div class="container">
+
+  <div class="row searchbox ">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search for...">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+      </div>
+      <!-- /input-group -->
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-3">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Categories</h3>
+        </div>
+        <div class="panel-body">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">Electronics
+            </label>
+
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">Mobile
+            </label>
+
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">Car
+            </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h3 class="panel-title">Location</h3>
+        </div>
+        <div class="panel-body">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">Dhaka
+            </label>
+
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">Rangpur
+            </label>
+
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">Chittagong
+            </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">Price</h3>
+        </div>
+        <div class="panel-body">
+          This is a Basic panel
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-9 posts-content">
+
+      <div class="row">
+        <div class="col-sm-12 col-md-12 thumbnail">
+          <div class="thumbnail">
+            <img src="/bootstrap/images/kittens.jpg"
+                 alt="Generic placeholder thumbnail">
+          </div>
+          <div class="caption">
+            <h3>Thumbnail label</h3>
+
+            <p>Some sample text. Some sample text.</p>
+
+            <p>
+              <a href="#" class="btn btn-primary" role="button">
+                Button
+              </a>
+              <a href="#" class="btn btn-default" role="button">
+                Button
+              </a>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-md-12 thumbnail">
+          <div class="thumbnail">
+            <img src="/bootstrap/images/kittens.jpg"
+                 alt="Generic placeholder thumbnail">
+          </div>
+          <div class="caption">
+            <h3>Thumbnail label</h3>
+
+            <p>Some sample text. Some sample text.</p>
+
+            <p>
+              <a href="#" class="btn btn-primary" role="button">
+                Button
+              </a>
+              <a href="#" class="btn btn-default" role="button">
+                Button
+              </a>
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
