--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,36 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<div class="container">
 
-<%= form_for @post, html: {class: "nifty_form"} do |f| %>
-    <%= f.text_field :title %>
+<%= form_for @post, html: {class: "form-horizontal"} do |f| %>
+
+      <div class="form-group">
+        <label for="inputEmail3" class="col-md-2 control-label">Title</label>
+        <div class="col-md-8">
+          <%= f.text_field :title, class: "form-control", placeholder:"Title" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="inputEmail3" class="col-md-2 control-label">Title</label>
+        <div class="col-md-8">
+          <%= f.text_field :title, class: "form-control", placeholder:"Title" %>
+        </div>
+      </div>
+
+
+      <div class="row">
+
+       <div class="col-md-2">
+         <p>Title</p>
+       </div>
+
+       <div class="col-md-10">
+         <%= f.text_field :title %>
+       </div>
+
+     </div>
+
     <%= f.text_area :desc, size: "60x12" %>
     <%= f.submit "Create" %>
 <% end %>
+
+</div>
