--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,49 +19,31 @@
         <div class="panel-heading">
           <h3 class="panel-title">Categories</h3>
         </div>
+
         <div class="panel-body">
-          <div class="checkbox">
-            <label>
-              <input type="checkbox">Electronics
-            </label>
-
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox">Mobile
-            </label>
-
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox">Car
-            </label>
-          </div>
+          <% Category.all.each do |category| %>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox"><%= category.name %>
+                </label>
+              </div>
+          <% end %>
         </div>
       </div>
 
       <div class="panel panel-success">
         <div class="panel-heading">
-          <h3 class="panel-title">Location</h3>
+          <h3 class="panel-title">Locations</h3>
         </div>
         <div class="panel-body">
-          <div class="checkbox">
-            <label>
-              <input type="checkbox">Dhaka
-            </label>
+          <% Location.all.each do |location| %>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox"><%= location.name %>
+                </label>
+              </div>
+          <% end %>
 
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox">Rangpur
-            </label>
-
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox">Chittagong
-            </label>
-          </div>
         </div>
       </div>
 
@@ -70,7 +52,7 @@
           <h3 class="panel-title">Price</h3>
         </div>
         <div class="panel-body">
-          This is a Basic panel
+          Price panel
         </div>
       </div>
     </div>
@@ -78,47 +60,8 @@
     <div class="col-md-9 posts-content">
 
       <div class="row">
-        <div class="col-sm-12 col-md-12 thumbnail">
-          <div class="thumbnail">
-            <img src="/bootstrap/images/kittens.jpg"
-                 alt="Generic placeholder thumbnail">
-          </div>
-          <div class="caption">
-            <h3>Thumbnail label</h3>
 
-            <p>Some sample text. Some sample text.</p>
-
-            <p>
-              <a href="#" class="btn btn-primary" role="button">
-                Button
-              </a>
-              <a href="#" class="btn btn-default" role="button">
-                Button
-              </a>
-            </p>
-          </div>
-        </div>
-
-        <div class="col-sm-12 col-md-12 thumbnail">
-          <div class="thumbnail">
-            <img src="/bootstrap/images/kittens.jpg"
-                 alt="Generic placeholder thumbnail">
-          </div>
-          <div class="caption">
-            <h3>Thumbnail label</h3>
-
-            <p>Some sample text. Some sample text.</p>
-
-            <p>
-              <a href="#" class="btn btn-primary" role="button">
-                Button
-              </a>
-              <a href="#" class="btn btn-default" role="button">
-                Button
-              </a>
-            </p>
-          </div>
-        </div>
+        <%= render @posts %>
 
       </div>
     </div>
