--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,20 @@
 <div class="container">
-
   <div class="row searchbox ">
     <div class="col-md-6 col-md-offset-3">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search for...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-      </span>
-      </div>
-      <!-- /input-group -->
+
+      <%= form_for posts_path, :method => 'get' do %>
+
+          <div class="input-group">
+            <%= text_field_tag :q, params[:q], class: "form-control", placeholder: "Search for..." %>
+            <span class="input-group-btn">
+
+            <%= submit_tag "GO!", class: "btn btn-default", name: nil %>
+            </span>
+          </div>
+
+      <% end %>
     </div>
+
   </div>
 
   <div class="row">
@@ -66,4 +71,5 @@
       </div>
     </div>
   </div>
+
 </div>
