--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,11 +22,11 @@
           <h3 class="panel-title">Categories</h3>
         </div>
 
-        <div class="panel-body">
+        <div class="panel-body category-search">
           <% Category.all.each do |category| %>
               <div class="checkbox">
                 <label>
-                  <input type="checkbox"><%= category.name %>
+                  <input type="checkbox" value="<%= category.id %>"><%= category.name %>
                 </label>
               </div>
           <% end %>
@@ -37,11 +37,11 @@
         <div class="panel-heading">
           <h3 class="panel-title">Locations</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body location-search">
           <% Location.all.each do |location| %>
               <div class="checkbox">
                 <label>
-                  <input type="checkbox"><%= location.name %>
+                  <input type="checkbox" value="<%= location.id %>"><%= location.name %>
                 </label>
               </div>
           <% end %>
