--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
       <%= form_for posts_path, :method => 'get' do %>
           <div class="input-group">
-            <%= text_field_tag :q, params[:q], class: "form-control", placeholder: "Search for..." %>
+            <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search for..." %>
             <span class="input-group-btn">
             <%= submit_tag "GO!", class: "btn btn-default", name: nil %>
             </span>
@@ -60,10 +60,11 @@
     </div>
 
     <div class="col-md-9 posts-content">
-
+      <%= paginate @posts,:remote => false %>
       <div class="row">
         <%= render @posts %>
       </div>
+      <%= paginate @posts %>
     </div>
   </div>
 
