--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,10 +23,10 @@
         </div>
 
         <div class="panel-body category-search">
-          <% Category.all.each do |category| %>
+          <% @posts.response.response['facets']['categories']['terms'].each do |c|  %>
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" value="<%= category.id %>"><%= category.name %>
+                  <input type="checkbox" value="<%= c.id %>"><%= "#{c['term'].capitalize()}(#{ c['count']})" %>
                 </label>
               </div>
           <% end %>
@@ -37,15 +37,15 @@
         <div class="panel-heading">
           <h3 class="panel-title">Locations</h3>
         </div>
+
         <div class="panel-body location-search">
-          <% Location.all.each do |location| %>
+          <% @posts.response.response['facets']['location']['terms'].each do |l| %>
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" value="<%= location.id %>"><%= location.name %>
+                  <input type="checkbox" value="<%= l.id %>"><%= "#{ l['term'].capitalize()}(#{ l['count']})" %>
                 </label>
               </div>
           <% end %>
-
         </div>
       </div>
 
@@ -62,7 +62,9 @@
     <div class="col-md-9 posts-content">
       <%= paginate @posts,:remote => false %>
       <div class="row">
-        <%= render @posts %>
+        <% @posts.each do |post| %>
+            <%= render partial: 'post',object: post %>
+        <% end %>
       </div>
       <%= paginate @posts %>
     </div>
